classDiagram
    %% Base classes (base.py)
    class PluginType {
        <<enum>>
        MODEL
        RECOGNIZER
        OPERATOR
    }
    
    class PluginMetadata {
        <<dataclass>>
        +name: str
        +version: str
        +description: str
        +author: str
        +plugin_type: PluginType
        +dependencies: List[str]
        +config_schema: Dict
    }
    
    class BasePlugin {
        <<abstract>>
        +__init__(config)
        +get_metadata()
        +initialize()
        +is_available()
        +validate_config()
    }
    
    class RecognizerPlugin {
        <<abstract>>
        +create_recognizer()
        +recognize(text, language)
        +get_supported_languages()
    }
    
    class OperatorPlugin {
        <<abstract>>
        +create_operator()
        +apply(text, entities)
        +get_supported_entity_types()
    }
    
    class ModelPlugin {
        <<abstract>>
        +load_model()
        +predict(text)
        +get_model_info()
    }
    
    %% Registry classes (registry.py)
    class PluginRegistry {
        -_plugins: Dict[str, Type[BasePlugin]]
        +register(plugin_class)
        +unregister(plugin_name)
        +create_instance(plugin_name, config)
        +get_plugin_class(plugin_name)
        +get_registered_plugins()
        +is_registered(plugin_name)
    }
    
    %% Loader classes (loader.py)
    class PluginLoader {
        -_plugin_directories: List[str]
        +add_plugin_directory(directory)
        +discover_plugins()
        +load_plugin_by_name(plugin_name)
        +get_plugin_directories()
        +_scan_directory(directory)
        +_load_plugin_module(module_path)
    }
    
    %% Manager classes (manager.py)
    class PluginManager {
        -_registry: PluginRegistry
        -_loader: PluginLoader
        +initialize()
        +get_available_plugins()
        +create_plugin_instance(plugin_name, config)
        +register_builtin_plugins()
        +validate_plugin_dependencies()
        +shutdown()
    }
    
    %% Built-in Recognizer Plugins (recognizer_plugins.py)
    class PresidioRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class UserIdRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class CourtReferenceRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class CurrencyRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class FileNumberRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class FlairRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class GermanDateRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class ReferenceCodeRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class TransformersRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    class RegexPhoneRecognizerPlugin {
        +get_metadata()
        +initialize()
        +create_recognizer()
        +recognize(text, language)
        +is_available()
    }
    
    %% Built-in Operator Plugins (operators.py)
    class PresidioOperatorPlugin {
        +get_metadata()
        +initialize()
        +create_operator()
        +apply(text, entities)
        +is_available()
    }
    
    %% Built-in Model Plugins (models.py)
    class FlairModelPlugin {
        +get_metadata()
        +initialize()
        +load_model()
        +predict(text)
        +is_available()
    }
    
    class SpacyModelPlugin {
        +get_metadata()
        +initialize()
        +load_model()
        +predict(text)
        +is_available()
    }
    
    %% Inheritance relationships
    BasePlugin <|-- RecognizerPlugin
    BasePlugin <|-- OperatorPlugin
    BasePlugin <|-- ModelPlugin
    
    RecognizerPlugin <|-- PresidioRecognizerPlugin
    RecognizerPlugin <|-- UserIdRecognizerPlugin
    RecognizerPlugin <|-- CourtReferenceRecognizerPlugin
    RecognizerPlugin <|-- CurrencyRecognizerPlugin
    RecognizerPlugin <|-- FileNumberRecognizerPlugin
    RecognizerPlugin <|-- FlairRecognizerPlugin
    RecognizerPlugin <|-- GermanDateRecognizerPlugin
    RecognizerPlugin <|-- ReferenceCodeRecognizerPlugin
    RecognizerPlugin <|-- TransformersRecognizerPlugin
    RecognizerPlugin <|-- RegexPhoneRecognizerPlugin
    
    OperatorPlugin <|-- PresidioOperatorPlugin
    
    ModelPlugin <|-- FlairModelPlugin
    ModelPlugin <|-- SpacyModelPlugin
    
    %% Composition relationships
    PluginManager --> PluginRegistry : contains
    PluginManager --> PluginLoader : contains
    PluginRegistry --> BasePlugin : manages
    BasePlugin --> PluginMetadata : has
    BasePlugin --> PluginType : uses